--- a/index.css
+++ b/index.css
@@ -30,7 +30,14 @@ body {
 	background: white;
 	box-shadow: 2px 4px 8px 2px rgba(0,0,0,.3);
 
+	padding: 20px;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.modal label {
+	align-self: flex-end;
+	margin: 10px 50px;
 }
