--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 	margin-bottom: 100px;
+	background: #f7cf89;
 }
 
 .banner {
@@ -43,8 +44,11 @@ body {
 }
 
 .content {
-	margin: 0 auto;
+	background: rgba(255,255,255,.7);
+	border-radius: 1.2rem;
+	margin: 1.1rem auto;
 	max-width: 500px;
+	padding: .5rem .9rem;
 	text-align: center;
 	font-size: 2rem;
 }
