--- a/index.css
+++ b/index.css
@@ -15,6 +15,12 @@ body {
     -moz-osx-font-smoothing: grayscale;
 	margin-bottom: 100px;
 	background: #f7cf89;
+	display: flex;
+	flex-direction: column;
+}
+
+a {
+	color: darkblue;
 }
 
 .banner {
@@ -46,7 +52,7 @@ body {
 .content {
 	background: rgba(255,255,255,.7);
 	border-radius: 1.2rem;
-	margin: 1.1rem auto;
+	margin: 1.1rem 2rem;
 	max-width: 500px;
 	padding: .5rem .9rem;
 	text-align: center;
@@ -59,7 +65,7 @@ body {
 }
 
 .content h2 {
-	font-size: 1rem;
+	font-size: 1.5rem;
 }
 
 .content p {
